Fix Bug #61207 PDO::nextRowset() after a multi-statement query doesn't always work